style: :bug: Fixing layout issues

--- a/src/styles/pages/journals.scss
+++ b/src/styles/pages/journals.scss
@@ -190,6 +190,10 @@ article {
 }
 
 .light {
+  .read {
+    border: 1px dashed $dark;
+  }
+
   article {
     blockquote {
       border-left: 2px solid $dark;
@@ -206,5 +210,6 @@ article {
     img {
       border: 2px solid $dark;
     }
+    
   }
 }
